--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pradeep Rajendra</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <img src="./assets/images/portfolio.png" alt="portfolio">
