--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pradeep Rajendra</title>
-    <link rel="stylesheet" href="./style/style.css">
+    /*<link rel="stylesheet" href="./style/style.css">*/
+        <style>
+        body, h1, h2, h3, p, ul, li {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+        width: 100%;
+    }
+
+/* Media queries for responsiveness */
+@media screen and (min-width: 300px) and (max-width:700) {
+    img {
+        width: 90px;
+    }
+}
+    </style>
 </head>
 <body>
     <img src="./assets/images/portfolio.png" alt="portfolio">
